@@ -311,6 +311,7 @@ DEF_FUNCTION_TYPE (V8DI, V8DI, V8DI, UQI)
 DEF_FUNCTION_TYPE (V8DI, PV8DI)
 DEF_FUNCTION_TYPE (V8DI, V8DI)
 
+DEF_FUNCTION_TYPE (VOID, INT, INT64)
 DEF_FUNCTION_TYPE (DI, V2DI, INT)
 DEF_FUNCTION_TYPE (DOUBLE, V2DF, INT)
 DEF_FUNCTION_TYPE (FLOAT, V4SF, INT)
