@@ -236,6 +236,8 @@
   UNSPECV_XRSTORS64
   UNSPECV_XSAVEC
   UNSPECV_XSAVEC64
+  UNSPECV_XGETBV
+  UNSPECV_XSETBV
 
   ;; For atomic compound assignments.
   UNSPECV_FNSTENV
@@ -19028,6 +19030,43 @@
    (set_attr "memory" "load")
    (set (attr "length")
         (symbol_ref "ix86_attr_length_address_default (insn) + 4"))])
+
+(define_insn "xsetbv"
+  [(unspec_volatile:SI
+	 [(match_operand:SI 0 "register_operand" "c")
+	  (match_operand:DI 1 "register_operand" "A")]
+	 UNSPECV_XSETBV)]
+  "!TARGET_64BIT && TARGET_XSAVE"
+  "xsetbv"
+  [(set_attr "type" "other")])
+
+(define_insn "xsetbv_rex64"
+  [(unspec_volatile:SI
+	 [(match_operand:SI 0 "register_operand" "c")
+	  (match_operand:SI 1 "register_operand" "a")
+	  (match_operand:SI 2 "register_operand" "d")]
+	 UNSPECV_XSETBV)]
+  "TARGET_64BIT && TARGET_XSAVE"
+  "xsetbv"
+  [(set_attr "type" "other")])
+
+(define_insn "xgetbv"
+  [(set (match_operand:DI 0 "register_operand" "=A")
+  	(unspec_volatile:DI [(match_operand:SI 1 "register_operand" "c")]
+			    UNSPECV_XGETBV))]
+  "!TARGET_64BIT && TARGET_XSAVE"
+  "xgetbv"
+  [(set_attr "type" "other")])
+
+(define_insn "xgetbv_rex64"
+  [(set (match_operand:DI 0 "register_operand" "=a")
+  	(unspec_volatile:DI [(match_operand:SI 2 "register_operand" "c")]
+			    UNSPECV_XGETBV))
+   (set (match_operand:DI 1 "register_operand" "=d")
+	(unspec_volatile:DI [(match_dup 2)] UNSPECV_XGETBV))]
+  "TARGET_64BIT && TARGET_XSAVE"
+  "xgetbv"
+  [(set_attr "type" "other")])
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;;
