@@ -1,5 +1,5 @@
 /* { dg-do compile } */
-/* { dg-options "-O2 -mrdpid " } */
+/* { dg-options "-O2 -mrdpid" } */
 /* { dg-final { scan-assembler "rdpid\[ \t]+(%|)eax" } } */
 
 #include <x86intrin.h>
